src/components/jsonTree/jsonTree.module.css
.root {
    display: flex;
    flex-direction: column;
    gap: var(--unit);
}

.title {
    margin: 0;
    font-size: var(--fontSizeXs);
    font-weight: 400;
}

.container {
    padding: calc(1.5 * var(--unit));
    border-radius: var(--roundedSmall);
    background: var(--surface);
    font-family: var(--fontMono);
    font-size: var(--fontSizeXs);
    font-weight: 500;
}

